--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "baseUrl": ".",
+    "target": "esnext",
+    "module": "esnext",
+    "baseUrl": "/Users/keroxp/Library/Caches",
     "paths": {
       "deno": ["./deno.d.ts"],
-      "https://*": [
-        "../../.deno/deps/https/*"
-      ],
-      "http://*": [
-        "../../.deno/deps/http/*"
-      ]
+      "https://*": ["./deno/deps/https/*"],
+      "http://*": ["./deno/deps/http/*"]
     }
   }
 }
